Added Utility Components

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,13 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/fhtools_logo.png" />
 		<meta name="viewport" content="width=device-width" />
+		<meta 
+			name="description"
+			content="
+				F.H Tools is a website that contains several tools to help with family history research.
+				Currently, the main tool of interest is a citation builder.
+				Author: Adam Bonny"
+		/>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
