Remove .png files

--- a/src/app.html
+++ b/src/app.html
@@ -2,14 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/fhtools_logo.png" />
+		<link rel="icon" href="%sveltekit.assets%/fhtools_logo.webp" />
 		<meta name="viewport" content="width=device-width" />
 		<meta 
 			name="description"
 			content="
-				F.H Tools is a website that contains several tools to help with family history research.
-				Currently, the main tool of interest is a citation builder.
-				Author: Adam Bonny"
+				F.H Tools is a website that contains several tools to help with family history research."
 		/>
 		%sveltekit.head%
 	</head>
